--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "ghost",
     "theme",
     "blog",
-    "minimalistic",
-    "template",
+    "devgroot",
+    "reactjsblog",
+    "prasannakr1998",
     "gatsby-theme",
     "gatsby-plugin"
   ],
