--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "url": "https://github.com/prasannakr1909/DevGroot-Blog/issues"
   },
   "keywords": [
-    "gatsby",
-    "ghost",
-    "theme",
-    "blog",
     "devgroot",
     "reactjsblog",
     "prasannakr1998",
-    "gatsby-theme",
-    "gatsby-plugin"
+    "devgroot reactjs",
+    "reactjs devgroot",
+    "angular devgroot",
+    "devgroot angular",
+    "nodejs devgroot",
+    "devgroot nodejs"
   ],
   "main": "n/a",
   "scripts": {
